--- a/product/wsnIndoorBack/html/index_netpan.html
+++ b/product/wsnIndoorBack/html/index_netpan.html
@@ -35,12 +35,12 @@
         <div class="top_navigation" style="display:block;height:60px;width:1000px;margin:10px 10px;float:left;"></div>
         <div class="user_info">
             <img id="head_img" class="head_img" src="../images/head_default.png" />
-            <span class="nickname">no_name21312313</span>
+            <span class="nickname">administrator_hz</span>
 
             <div id="user_info_detail" class="user_info_detail">
                 <div class="user_info_detail_head">
                     <img class="head_img" src="../images/head_default.png" />
-                    <span class="nickname">no_name21312313</span>
+                    <span class="nickname">administrator_hz</span>
                 </div>
                 <!--<div class="user_info_detail_middle"></div>-->
                 <ul>
