--- a/product/wsnIndoorBack/html/back_buildingByBMap.html
+++ b/product/wsnIndoorBack/html/back_buildingByBMap.html
@@ -59,12 +59,12 @@
             <div class="top_navigation" style="display:block;height:60px;margin:10px 10px;float:left;"></div>
             <div class="user_info">
                 <img id="head_img" class="head_img" src="../images/head_default.png" />
-                <span class="nickname">no_name21312313</span>
+                <span class="nickname">administrator_hz</span>
 
                 <div id="user_info_detail" class="user_info_detail">
                     <div class="user_info_detail_head">
                         <img class="head_img" src="../images/head_default.png" />
-                        <span class="nickname">no_name21312313</span>
+                        <span class="nickname">administrator_hz</span>
                     </div>
                     <!--<div class="user_info_detail_middle"></div>-->
                     <ul>
@@ -99,6 +99,9 @@
                 <!--地图形式-->
                 <div id="bmap" class="bmap-container"></div>
                 <div id="bmapDataInfo" class="bmap-data-container">
+                    <h4>楼宇信息和管理入口</h4>
+                    <span class="build-hint" v-if='currentMarker==null'>请在地图中点击您要查看和管理的楼宇</span>
+                    <span class="build-hint" v-else>点击进入楼宇，即可对楼宇进行管理</span>
                     <div id="bmapButton" v-if='currentMarker!=null'>
                         <button type="button" class="btn btn-primary" :bid="currentData.bid" @click='toMonitor'>进入楼内</button>
                         <button type="button" class="btn btn-danger" disabled>删除数据</button>
@@ -111,9 +114,33 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr v-for="(val,key) in currentData">
-                                <td>{{key}}</td>
-                                <td>{{val}}</td>
+                            <tr>
+                                <td>楼宇编号</td>
+                                <td>{{currentData.bid}}</td>
+                            </tr>
+                            <tr>
+                                <td>名称</td>
+                                <td>{{currentData.name}}</td>
+                            </tr>
+                            <tr>
+                                <td>高度</td>
+                                <td>{{currentData.height}}</td>
+                            </tr>
+                            <tr>
+                                <td>地址</td>
+                                <td>{{currentData.address}}</td>
+                            </tr>
+                            <tr>
+                                <td>简介</td>
+                                <td>{{currentData.descrip}}</td>
+                            </tr>
+                            <tr>
+                                <td>经度</td>
+                                <td>{{currentData.x}}</td>
+                            </tr>
+                            <tr>
+                                <td>纬度</td>
+                                <td>{{currentData.y}}</td>
                             </tr>
                         </tbody>
                     </table>
@@ -137,7 +164,7 @@
     <script src="../js/back/mock.js"></script>
     <!--app-->
     <script src="../js/back/app_back_buildByBMap.js"></script>
-        <!--app-->
+    <!--app-->
     <script src="../js/back/back_bmap.js"></script>
 
     <!--modal-->
