--- a/product/wsnIndoorBack/html/back_mapdetail.html
+++ b/product/wsnIndoorBack/html/back_mapdetail.html
@@ -65,12 +65,12 @@
             <div class="top_navigation" style="display:block;height:60px;margin:10px 10px;float:left;"></div>
             <div class="user_info">
                 <img id="head_img" class="head_img" src="../images/head_default.png" />
-                <span class="nickname">no_name21312313</span>
+                <span class="nickname">administrator_hz</span>
 
                 <div id="user_info_detail" class="user_info_detail">
                     <div class="user_info_detail_head">
                         <img class="head_img" src="../images/head_default.png" />
-                        <span class="nickname">no_name21312313</span>
+                        <span class="nickname">administrator_hz</span>
                     </div>
                     <!--<div class="user_info_detail_middle"></div>-->
                     <ul>
@@ -179,7 +179,7 @@
                                     </thead>
                                     <tbody>
                                         <tr>
-                                            <td>mapId</td>
+                                            <td>地图编号</td>
                                             <td>{{mapDetail.mapId}}</td>
                                         </tr>
                                         <tr>
@@ -187,8 +187,10 @@
                                             <td>{{mapDetail.title}}</td>
                                         </tr>
                                         <tr>
-                                            <td>status</td>
-                                            <td>{{mapDetail.status}}</td>
+                                            <td>状态</td>
+                                            <td v-if="mapDetail.status==0">未发布</td>
+                                            <td v-if="mapDetail.status==1">已发布</td>
+                                            <td v-if="mapDetail.status==2">已锁定或废弃</td>
                                         </tr>
                                         <tr>
                                             <td>创建时间</td>
@@ -208,7 +210,7 @@
                                             <td>{{mapDetail.buildName}}</td>
                                         </tr>
                                         <tr>
-                                            <td>建筑物id</td>
+                                            <td>建筑物编号</td>
                                             <td>{{mapDetail.bid}}</td>
                                         </tr>
                                     </tbody>
@@ -220,13 +222,17 @@
                                     <thead>
                                         <tr>
                                             <th width="25%">键</th>
-                                            <th width="75%">值</th>
+                                            <th width="25%">含义</th>
+                                            <th width="50%">值</th>
                                         </tr>
                                     </thead>
                                     <tbody>
                                         <tr v-for="(value,key) in baseMapData">
                                             <td>{{key}}</td>
-                                            <td>{{value}}</td>
+                                            <td>{{GmapParamMeanMap[key]}}</td>
+                                            <td>{{value}} <button type="button" class="modify-button btn btn-default" data-toggle="tooltip"
+                                                    title="修改">
+                                                    </button></td>
                                         </tr>
                                     </tbody>
                                 </table>
