--- a/product/wsnIndoorBack/html/login.html
+++ b/product/wsnIndoorBack/html/login.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>在线网盘</title>
+    <title>室内定位系统</title>
     <!--<link href="../css/style.css" rel='stylesheet' type='text/css' />-->
     <!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
